--- a/po/es_MX/queue.po
+++ b/po/es_MX/queue.po
@@ -1,18 +1,17 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-#   <jrombini@hotmail.com>, 2012.
-#   <sluc23@hotmail.com>, 2012.
+# ixiam_jose <jrombini@hotmail.com>, 2012
+# sluc23 <sluc23@hotmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-09-07 04:02+0000\n"
-"Last-Translator: ixiam_jose <jrombini@hotmail.com>\n"
-"Language-Team: Spanish (Mexico) (http://www.transifex.com/projects/p/civicrm/language/es_MX/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,3 +37,7 @@ msgstr "Datos de la cola de elementos"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Corredor de la cola"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
