po: update po/et_EE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/et_EE/menu.po
+++ b/po/et_EE/menu.po
@@ -10,8 +10,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Estonian (http://www.transifex.com/civicrm/civicrm/language/et/)\n"
 "MIME-Version: 1.0\n"
@@ -129,8 +129,8 @@ msgid "Case Activity"
 msgstr "Juhtumi tegevus"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Juhtumi raport"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -149,8 +149,8 @@ msgid "Assign to Another Client"
 msgstr "Määra teisele kliendile"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Loo tegevus juhtumile"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -174,10 +174,6 @@ msgstr "Juhtumi staatused"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Kokkupuutuvad keskkonnad"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr ""
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -252,6 +248,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr ""
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -269,9 +269,15 @@ msgstr "Aktsepteeritud krediitkaardid"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Sissemaksed"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Korduvad Toetused"
@@ -321,6 +327,23 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Accounting Batch Export"
+msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr ""
+
+msgctxt "menu"
+msgid "Email Invoice"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -475,6 +498,11 @@ msgstr "Otsi eelistusi"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Navigeerimise menüü"
 
@@ -508,10 +536,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Ajakava meeldetuletused"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Seda poleks tohtinud näha"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -529,6 +553,11 @@ msgstr "Trüki lehekülg (pdf) formaadis"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "E-posti pöördumiste vormingud"
 
@@ -542,8 +571,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Aadressi vorming"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr "Keel, valuuta, asukoht"
 
 #: xml/templates/civicrm_navigation.tpl
@@ -695,10 +725,6 @@ msgid "Administer CiviCRM"
 msgstr "Administreeri CiviCRMi"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Valikute väärtused"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Hinna komplektid"
 
@@ -766,10 +792,6 @@ msgstr "Otsingu ehitaja"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Kohandatud otsingud"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Lihtotsing"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -861,6 +883,10 @@ msgid "CiviCRM Blog"
 msgstr ""
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Juhtumi tööleht"
 
@@ -915,6 +941,10 @@ msgid "Import Activities"
 msgstr "Importimise tegevused"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Uuenda CiviCRMi"
 
@@ -951,12 +981,16 @@ msgid "Browse Uploaded files"
 msgstr "Sirvi üleslaetud faile"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Logi välja"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -969,6 +1003,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "ProfileEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
 msgstr ""
 
 msgctxt "menu"
@@ -1066,6 +1104,10 @@ msgid "Event Online Registration"
 msgstr "Sündmuse online registreerimine"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Konverentsi osad"
 
@@ -1099,6 +1141,10 @@ msgstr "Eemalda kaardilt"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Vaata kaarti"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1153,8 +1199,8 @@ msgid "Resubscribe"
 msgstr "Taasta tellimus"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Loobu"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1288,6 +1334,11 @@ msgstr "Raportite nimekiri"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM News"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1427,6 +1478,16 @@ msgstr "Leia hulgi-SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr ""
 
@@ -1532,11 +1593,6 @@ msgstr "Lokaliseerimine"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Keel, valuuta, asukoht"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Eelistatud keele valikud"
 
@@ -1554,6 +1610,11 @@ msgstr "Kasutajaõigused (juurdepääsu kontroll)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Süsteemi seaded"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1622,6 +1683,11 @@ msgstr "CiviToetus"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviLiige"
 
@@ -1632,8 +1698,13 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Abi"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1642,18 +1713,43 @@ msgstr "Dokumentatsioon"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Kogukonna foorumid"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Osale"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Info"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1880,6 +1976,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr ""
 
@@ -2049,144 +2150,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr ""
-
-msgctxt "menu"
-msgid "Email Invoice"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
