--- a/po/eu/queue.po
+++ b/po/eu/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -6,15 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-07-24 20:42+0000\n"
-"Language-Team: Basque (http://www.transifex.com/projects/p/civicrm/language/eu/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Basque (http://www.transifex.com/civicrm/civicrm/language/eu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: eu\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
@@ -34,4 +34,8 @@ msgstr ""
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
+msgstr ""
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
 msgstr ""
